the main page has been created

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-  <link rel="stylesheet" href="styles.css">
+    <title>Basic blog</title>
+    <link rel="stylesheet" href="resetCss.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<div class="mainWrap container">
+    <header>
+        <h1 class="mainTitle">Title</h1>
+    </header>
+
+    <div id="root"></div>
+</div>
 
 <script src="script.js"></script>
 </body>
